# svg-transform

./: .gitignore  MANIFEST.in  Taskfile.yml  pyproject.toml  redirect.py  requirements.txt
svg_transform/: Taskfile.yml  app.py  data_structures.py
svg_transform/backend/: colors.py  configs.py  data_structure.py
svg_transform/backend/custom_log_handlers/: streamlit_log_handler.py
svg_transform/custom_log_handlers/: streamlit_log_handler.py
svg_transform/frontend/: console_view.py
svg_transform/resources/: app.toml  svg_display.html
