[project]
name = "svg-transform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "more-itertools>=10.5.0",
    "numpy>=2.1.1",
    "pandas>=2.2.2",
    "pydantic>=2.9.2",
    "rich>=13.8.1",
    "streamlit>=1.38.0",
]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.381",
]
